[gd_scene load_steps=4 format=3 uid="uid://d1nksoffe03pe"]

[ext_resource type="Script" path="res://scenes/hud/menus.gd" id="1_5e8dr"]
[ext_resource type="PackedScene" uid="uid://cnq6inm64iiuh" path="res://scenes/hud/inventory_ui_slot.tscn" id="2_pinmy"]
[ext_resource type="PackedScene" uid="uid://bfgeqhut5uq1i" path="res://scenes/hud/notification.tscn" id="3_2k41i"]

[node name="Menus" type="CanvasLayer"]
script = ExtResource("1_5e8dr")

[node name="Overlay" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.164706, 0.0588235, 0, 0.576471)

[node name="InventoryUI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -340.0
offset_top = -231.0
offset_right = 340.0
offset_bottom = 231.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="Label" type="Label" parent="InventoryUI/VBoxContainer"]
layout_mode = 2
text = "Invnetory"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InventoryGrid" type="HBoxContainer" parent="InventoryUI/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="InventoryUISlot" parent="InventoryUI/VBoxContainer/InventoryGrid" instance=ExtResource("2_pinmy")]
layout_mode = 2

[node name="ItemInfo" type="VBoxContainer" parent="InventoryUI/VBoxContainer"]
layout_mode = 2

[node name="ItemName" type="Label" parent="InventoryUI/VBoxContainer/ItemInfo"]
unique_name_in_owner = true
layout_mode = 2
text = "Name"
horizontal_alignment = 1

[node name="ItemDesc" type="Label" parent="InventoryUI/VBoxContainer/ItemInfo"]
unique_name_in_owner = true
layout_mode = 2
text = "Desc"
horizontal_alignment = 1

[node name="Notification" type="Control" parent="."]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -308.0
offset_top = -453.0
grow_horizontal = 0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Notification"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="NotificationContainer" type="VBoxContainer" parent="Notification/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 2

[node name="Notification" parent="Notification/MarginContainer/NotificationContainer" instance=ExtResource("3_2k41i")]
layout_mode = 2
